--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,14 @@
-command: ["uvicorn", "backend.main:app"]
+# Databricks Apps configuration
+# Build and runtime commands for Node.js + FastAPI app
+
+# Install dependencies and build frontend before starting
+command:
+  - sh
+  - -c
+  - |
+    echo "Installing Node.js dependencies..."
+    npm install
+    echo "Building frontend..."
+    npm run build
+    echo "Starting FastAPI server..."
+    uvicorn backend.main:app --host 0.0.0.0 --port 8000
