--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "chart.js": "^4.4.0",
-    "esbuild": "^0.21.5",
+    "esbuild": "0.21.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
@@ -22,5 +22,8 @@
     "react-dom": "^18.2.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "@esbuild/linux-x64": "0.21.5"
   }
 }
